# main/http_server/openapi.yaml
@@ -279,6 +279,7 @@ components:
         - useFallbackStratum
         - pools
         - poolConnectionInfo
+        - primaryPoolError
         - poolDifficulty
         - power
         - resetReason
@@ -513,6 +514,9 @@ components:
         poolConnectionInfo:
           type: string
           description: Current pool address family
+        primaryPoolError:
+          type: string
+          description: Last error encountered by primary pool causing failover
         poolDifficulty:
           type: number
           description: Current pool difficulty
